Fix ui/gl/generate_bindings.py.

This script had an incorrect exception (RunTimError -> RuntimeError)
and also was erroring on an enum-to-string function check. Fix the
naming of the exception error and allow for the same enum with a
different suffix to pick the first one arbitrarily, since they should
have the same value.

This also regenerates the generated files which were not up-to-date.

BUG=740153
R=piman@chromium.org

Change-Id: I2f6b982064bbedc8b7f4c12092ca1be5ea18e4df
Reviewed-on: https://chromium-review.googlesource.com/563503
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Jamie Madill <jmadill@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485045}
Former-commit-id: 43d64677dde45bbde789f77ecbba6687a54be850